recursion.logo.square.FourSquare.scala.code
def square {
  for (pas <- 1 to 4){
  forward(100)
  left()
  }
}
override def run() {
  
}
